feat: add panel logs and updates
SIN-49 SIN-36
